# nonebot-plugin-access-control

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  bot.py  pyproject.toml  qodana.yaml
.github/workflows/: pr-check.yml  release.yml  run-test.yml
docs/: kaiheila.md  onebot_v11.md  onebot_v12.md  qqguild.md
src/nonebot_plugin_ac_demo/: __init__.py  apscheduler_demo.py  event_demo.py  matcher_demo.py  matchers.py  plugin_service.py
src/nonebot_plugin_access_control/: __init__.py  access_control.py  alc.py  config.py  context.py  errors.py  event_bus.py  matcher.py  patch_matcher.py  patcher.py  plugin_data.py  service.py
src/nonebot_plugin_access_control/datastore/: __init__.py
src/nonebot_plugin_access_control/datastore/migrations/: 6fbda6d1d8ee_.py  875c4dd8c271_.py
src/nonebot_plugin_access_control/handler/: __init__.py  help_handler.py  limit_handler.py  permission_handler.py  service_handler.py  subject_handler.py
src/nonebot_plugin_access_control/handler/utils/: env.py  errors.py  permission.py
src/nonebot_plugin_access_control/matchers/: __init__.py  handle_error.py  parser.py
src/nonebot_plugin_access_control/migrations/: 6c745e251f7c_init_db.py  6fbda6d1d8ee_.py  875c4dd8c271_.py  96ced46e72e9_data_migrate.py  9bb3231cf9aa_init_db.py
src/nonebot_plugin_access_control/models/: __init__.py  data_source.py  permission.py  rate_limit.py
src/nonebot_plugin_access_control/orm_migrations/: 96ced46e72e9_data_migrate.py  9bb3231cf9aa_init_db.py
src/nonebot_plugin_access_control/rate_limit/: __init__.py  repo.py  rule.py
src/nonebot_plugin_access_control/repository/: utils.py
src/nonebot_plugin_access_control/repository/orm/: permission.py  rate_limit.py
src/nonebot_plugin_access_control/repository/permission/: __init__.py  impl.py  interface.py
src/nonebot_plugin_access_control/repository/rate_limit/: __init__.py  impl.py  interface.py
src/nonebot_plugin_access_control/repository/rate_limit_token/: __init__.py  datastore.py  inmemory.py  interface.py
src/nonebot_plugin_access_control/script/: __init__.py
src/nonebot_plugin_access_control/service/: __init__.py  base.py  methods.py  nonebot.py  plugin.py  subservice.py  subservice_owner.py
src/nonebot_plugin_access_control/service/_impl/: __init__.py  factory.py  patcher.py  permission.py  rate_limit.py
src/nonebot_plugin_access_control/service/impl/: permission.py  rate_limit.py
src/nonebot_plugin_access_control/service/impl/rate_limit/: __init__.py
src/nonebot_plugin_access_control/service/impl/rate_limit/token/: __init__.py  datastore.py  inmemory.py  interface.py
src/nonebot_plugin_access_control/service/interface/: __init__.py  base.py  nonebot_service.py  permission.py  rate_limit.py  service.py  service_base.py  subservice_owner.py
src/nonebot_plugin_access_control/service/permission/: __init__.py  permission.py
src/nonebot_plugin_access_control/service/rate_limit/: __init__.py  rule.py  token.py
src/nonebot_plugin_access_control/subject/: __init__.py  extractor.py  kaiheila.py  manager.py  model.py  onebot_v11.py
src/nonebot_plugin_access_control/subject/extractor/: __init__.py  base.py  onebot_v11.py  onebot_v12.py  session.py  union.py
src/nonebot_plugin_access_control/subject/extractor/builtin/: kaiheila.py  onebot_v11.py  qqguild.py  session.py
src/nonebot_plugin_access_control/utils/: inspect.py  session.py  sql.py  superuser.py  tree.py
src/nonebot_plugin_access_control_api/: errors.py
src/nonebot_plugin_access_control_api/models/: permission.py  rate_limit.py
src/nonebot_plugin_access_control_api/service/: __init__.py  methods.py
src/nonebot_plugin_access_control_api/service/interface/: __init__.py  permission.py  plugin_service.py  rate_limit.py  subservice_owner.py
src/nonebot_plugin_access_control_api/subject/: __init__.py  manager.py
src/nonebot_plugin_access_control_api/subject/extractor/: __init__.py  base.py  chain.py
src/nonebot_plugin_access_control_api/subject/extractor/builtin/: session.py
src/nonebot_plugin_access_control_api/utils/: call_with_params.py  superuser.py
src/nonebot_plugin_access_control_kaiheila/: __init__.py
src/nonebot_plugin_access_control_kaiheila/subject/extractor/: __init__.py
src/nonebot_plugin_access_control_onebot/: __init__.py
src/nonebot_plugin_access_control_onebot/subject/extractor/: __init__.py  v11.py  v12.py
src/nonebot_plugin_access_control_qqguild/: __init__.py
src/nonebot_plugin_access_control_qqguild/subject/extractor/: __init__.py
src/tests/: conftest.py  test_limit_handler.py  test_permission.py  test_permission_handler.py  test_rate_limit.py  test_service_handler.py  test_subject_handler.py
src/tests/utils/: event.py  ob11_event.py
